# Kokkos_Hash_Profiling

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  gen_data.sh  junk  junk.txt  remove_cmake.sh
data/murmur3/: data.txt  junk2.txt
data/murmur3/polaris/: data3.txt  data5.txt
data/murmur3/polaris/fixed_run/: data1.txt  data2.txt  data3.txt  data4.txt  data5.txt
data/murmur3/polaris/init_run/: data1.txt  data2.txt  data4.txt
data/murmur3/tellico/: data1.txt  data3.txt  data5.txt
data/murmur3/tellico/fixed_run/: data1.txt  data2.txt  data3.txt  data4.txt  data5.txt
data/murmur3/tellico/init_run/: data2.txt  data4.txt
include/: kokkos_murmur3.hpp  map_helpers.hpp
src/: profiling_kokkos_barebones.cpp  profiling_kokkos_murmur3.cpp
visualization/: cpy.ipynb  visualize.ipynb
